--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
+
 <head>
+
   <head>
     <link rel="stylesheet" href="styles.css">
   </head>
-  
+
   <h1 id="intro">Flags of the World</h1>
-  
+
   <br>
-  
+
   <!-- 
     Some flags already have some CSS elements added in
     You are expected to finish the rest.
   -->
-  
+
   <div class="flags">
     <h2 class="label">Poland</h2>
     <div class="flag">
       <div class="white twovert"></div>
       <div class="red twovert"></div>
     </div>
-  
+
     <h2 class="label">Luxembourg</h2>
     <div class="flag">
       <div class="red threevert"></div>
@@ -29,21 +31,25 @@
 
     <h2 class="label">Thailand</h2>
     <div class="flag">
-      <div class="thailand-red"></div>
-      <div class="thailand-white"></div>
-      <div class="thailand-blue"></div>
-      <div class="thailand-white"></div>
-      <div class="thailand-red"></div>
+      <div class="thailand-red narrow"></div>
+      <div class="thailand-white narrow"></div>
+      <div class="thailand-blue wide"></div>
+      <div class="thailand-white narrow"></div>
+      <div class="thailand-red narrow"></div>
     </div>
-  
+
     <h2 class="label">Romania</h2>
-    <div class="flag" style="">
-      <!-- insert flag here -->
+    <div class="flag" style="display:flex; flex-direction: row;">
+      <div class="romania-blue threehoriz"></div>
+      <div class="romania-yellow threehoriz"></div>
+      <div class="romania-red threehoriz"></div>
     </div>
-  
+
     <h2 class="label">Mexico</h2>
-    <div class="flag">
-      <!-- insert flag here -->
+    <div class="flag" style="display:flex; flex-direction: row;">
+      <div class=" mexico-green threehoriz"></div>
+      <img class="mexico-img" src="./eagle.png" alt="mexico eagle img">
+      <div class="mexico-red threehoriz"></div>
     </div>
 
     <h2>Margin</h2>
@@ -56,29 +62,29 @@
     <div class="flag black">
       <div class="flag padding-container"></div>
     </div>
-  
+
     <h3>Challenge (These are optional)</h3>
 
     <h2>Greece</h2>
     <div class="flag">
       <!-- insert flag here -->
     </div>
-  
+
     <h2>South Africa</h2>
     <div class="flag">
       <!-- insert flag here -->
     </div>
-  
+
     <h2>Seychelis</h2>
     <div class="flag">
       <!-- insert flag here -->
     </div>
-  
+
     <h2>North Macedonia</h2>
     <div class="flag">
       <!-- insert flag here -->
     </div>
-  
+
     <h2>Finland</h2>
     <div class="flag">
       <!-- insert flag here -->
